# TGbot

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
bot/: Dockerfile  client.py  pyproject.toml
