[tool.poetry]
name = "tgbot-rielt-batumi"
version = "0.1.0"
description = "Bot for rent appartment in Batumi"
authors = ["Denis Chunarev <Bdata0DS@gmail.com>"]
license = "CC 3.0"
readme = "README.md"
packages = [{include = "tgbot_rielt_batumi"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
