[tool.poetry]
name = "bot"
version = "0.1.0"
description = "TGbot"
authors = ["Denis Chunarev <Bdata0DS@gmail.com>"]
license = "CC 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
